--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
-    <img src=>
+    <img src=img/IMG0228.JPG>
     <title>SARDORプロフィール</title>
   </head>
 
