--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </div>
 
     <div class="main">
-      <img src="sample.jpg">
+      <img src="IMG_0228.jpg">
       </div>
       
       <div class="contents">
