--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </div>
 
     <div class="main">
-      <src="https://github.com/rudo98/introduction.github.io/blob/main/IMG_0228.JPG">
+      <img src="https://github.com/rudo98/introduction.github.io/blob/main/img1.jpg">
       </div>
       
       <div class="contents">
