--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </div>
 
     <div class="main">
-      <img src="https://github.com/rudo98/introduction.github.io/blob/main/img1.jpg">
+      <img src="https://github.com/rudo98/introduction.github.io/blob/main/img1.jpg?raw=true">
       </div>
       
       <div class="contents">
